--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.angeluz.freyja"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <!-- OkHttp/HTTP o localhost necesitan esto -->
+<manifest package="com.angeluz.freyja" xmlns:android="http://schemas.android.com/apk/res/android">
     <uses-permission android:name="android.permission.INTERNET"/>
-
-    <application
-        android:label="Freyja"
-        android:icon="@mipmap/ic_launcher"
-        android:allowBackup="false">
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
+    <application android:label="Freyja" android:icon="@mipmap/ic_launcher" android:allowBackup="false">
+        <activity android:name=".MainActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
